--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
     <head>
-        <style>
-            p1 {
-                color: #753b3b;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         
+        <title>Giovanotti</title>
+
         <p1>
             Grande Sito
         </p1>
