Adesso il sito esiste!!!

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
         
         <title>Giovanotti</title>
 
-        <p1>
-            Grande Sito
-        </p1>
+        <h1>Scemo chi legge</h1>
+
+        <div class="bellissimo">
+            <p1>
+                Ciao giovanotti, acquistate il mio corso online per HTML/CSS se volete anche voi creare questi siti incredibili madonna ragazzi XD
+            </p1>
+        </div>
 
     </body>
 </html>
