--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <p1>
                 Ciao giovanotti, acquistate il mio corso online per HTML/CSS se volete anche voi creare questi siti incredibili madonna ragazzi XD
             </p1>
+
+            <p2>
+                Un po' pazzerello non credete? <b>Wang Sang Bao Lao!!!</b>
+            </p2>
+
         </div>
 
     </body>
